--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "routing",
     "templates"
   ],
-  "main": "./dist/snuggsi.min.es.js",
+  "main": "./dist/snuggsi.min.js",
   "bin": "bin/snuggsi",
   "directories": {
     "doc": "docs",
